--- a/app/src/main/res/layout/sensor_list_item.xml
+++ b/app/src/main/res/layout/sensor_list_item.xml
@@ -1,21 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/sensorIcon"
-        android:layout_width="100sp"
-        android:layout_height="50sp"
-        android:layout_weight="1"
-        app:srcCompat="@android:drawable/ic_menu_always_landscape_portrait" />
-
-    <TextView
-        android:id="@+id/sensorName"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="50sp"
-        android:layout_weight="1"
-        android:text="Nazwa" />
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-</LinearLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/sensorIcon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@android:drawable/ic_menu_always_landscape_portrait" />
+
+            <TextView
+                android:id="@+id/sensorName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Nazwa"
+                app:layout_constraintStart_toEndOf="@+id/sensorIcon"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/sensorType"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Typ"
+                app:layout_constraintStart_toEndOf="@+id/sensorIcon"
+                app:layout_constraintTop_toBottomOf="@+id/sensorName" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
